# learn-opengl

./: .clang-format  .clangd  README.md  TODO.md  compile.sh  meson.build  setup.sh  sun.vert
include/: game_state.h  gl_util.h  gl_wrapper.h  init.h  util.h
include/app/: core.h
include/glad/: gl.h
include/models/: model.h
include/renderer/: render.h
include/shaders/: shader.h  utils.h
include/textures/: texture.h
models/: earth.glb  sun.glb
shaders/: cube.frag  cube.vert  light.vert  sun.frag  sun.vert
src/: core.c  game_state.c  gl_util.c  gl_wrapper.c  init.c  main.c  meson.build  model.c  render.c  shader.c  texture.c
